--- a/scripts/vps-net_del.in
+++ b/scripts/vps-net_del.in
@@ -37,7 +37,7 @@ for IP in $IP_ADDR; do
 	vzarp del $IP
 	# Update ip address information
 	if [ "${VE_STATE}" = "running" -a -f "${VE_STATE_DIR}/${VEID}" ]; then
-		cat ${VE_STATE_DIR}/${VEID} | tr ' ' '\n' | \
+		cat ${VE_STATE_DIR}/${VEID} | tr ' ' '\n' |
 		grep -w -v "${IP}" | tr '\n' ' ' > ${VE_STATE_DIR}/${VEID}
 	fi
 done
