--- a/scripts/vps-net_del.in
+++ b/scripts/vps-net_del.in
@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/bin/sh
 #  Copyright (C) 2000-2007 SWsoft. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -33,12 +33,12 @@ vzcheckvar IP_ADDR VEID
 vzgetnetdev
 
 for IP in $IP_ADDR; do
-	vzdelrouting $IP
-	vzarp del $IP
+	vzdelrouting "$IP"
+	vzarp del "$IP"
 	# Update ip address information
-	if [ "${VE_STATE}" = "running" -a -f "${VE_STATE_DIR}/${VEID}" ]; then
-		cat ${VE_STATE_DIR}/${VEID} | tr ' ' '\n' |
-		grep -w -v "${IP}" | tr '\n' ' ' > ${VE_STATE_DIR}/${VEID}
+	if [ "$VE_STATE" = 'running' -a -f "$VE_STATE_DIR/$VEID" ]; then
+		tr ' ' '\n' <"$VE_STATE_DIR/$VEID" |
+		grep -w -v "$IP" | tr '\n' ' ' > "$VE_STATE_DIR/$VEID"
 	fi
 done
 
