scripts/vps-net_add.in: Add given IP address to neighbour table prior to adding routing for this address
Convert to pure Bourne shell script syntax.
Call vzarp() before vzaddrouting(), to ensure that given IP address
is added to neighbour table prior to adding routing for this address.
Fixes http://bugzilla.altlinux.org/show_bug.cgi?id=11192

Signed-off-by: Dmitry V. Levin <ldv@altlinux.org>

--- a/scripts/vps-net_add.in
+++ b/scripts/vps-net_add.in
@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/bin/sh
 #  Copyright (C) 2000-2007 SWsoft. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -37,16 +37,16 @@ vzgetnetdev
 
 vzarpipdetect "$IP_ADDR"
 for IP in $IP_ADDR; do
-	vzaddrouting $IP
-	vzarp add $IP
+	vzarp add "$IP"
+	vzaddrouting "$IP"
 done
 vzarpipset "$IP_ADDR"
 # Save ip address information
-mkdir -p ${VE_STATE_DIR} >/dev/null 2>&1
-if [ "${VE_STATE}" = "starting" ]; then
-	echo -n  "${IP_ADDR} " > ${VE_STATE_DIR}/${VEID}
-elif [ "${VE_STATE}" = "running" ]; then
-	echo -n "${IP_ADDR} " >> ${VE_STATE_DIR}/${VEID}
+mkdir -p "$VE_STATE_DIR" >/dev/null 2>&1
+if [ "$VE_STATE" = 'starting' ]; then
+	echo -n "$IP_ADDR " > "$VE_STATE_DIR/$VEID"
+elif [ "$VE_STATE" = 'running' ]; then
+	echo -n "$IP_ADDR " >> "$VE_STATE_DIR/$VEID"
 fi
 
 exit 0
