--- a/scripts/vps-stop.in
+++ b/scripts/vps-stop.in
@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/bin/sh
 #  Copyright (C) 2000-2007 SWsoft. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -29,8 +29,8 @@
 vzgetnetdev
 
 for IP in $IP_ADDR; do
-	vzdelrouting $IP
-	vzarp del $IP
+	vzdelrouting "$IP"
+	vzarp del "$IP"
 done
 exit 0
 # end of script
