Source /etc/vz/vz.conf in scripts that needs it.
After commit 1cb8182a5e3cbc697996bca4445384764281c572, vzarp... functions
call vz_get_neighbour_devs which rely on NEIGHBOUR_DEVS global config
parameter value. So source global config in scripts that calls vzarp...().

--- a/scripts/vps-functions.in
+++ b/scripts/vps-functions.in
@@ -108,7 +108,9 @@ vzgetnetdev()
 	}' | sed -e 's/:$//' -e 's/@.*$//'`
 }
 
-# Find neighbour interfaces for given IP.
+# Find neighbour interfaces for a given VE IP.
+# Make sure to source @PKGCONFDIR@/vz.conf before calling this,
+# in order to get the value of $NEIGHBOUR_DEVS from it.
 vz_get_neighbour_devs()
 {
 	[ -n "$NETDEVICES" ] || vzwarning 'Device list is empty'
