NEIGHBOUR_DEVS: add to global config and document.
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/vz.conf
+++ b/etc/vz.conf
@@ -18,6 +18,9 @@ VZFASTBOOT=no
 # By default automatically assigned.
 #VE_ROUTE_SRC_DEV="eth0"
 
+# Controls which interfaces to send ARP requests and modify APR tables on.
+NEIGHBOUR_DEVS=detect
+
 ## Template parameters
 TEMPLATE=/vz/template
 
