scripts/vps-functions.in (vz_get_neighbour_devs): Add IPv6 support
"/sbin/ip route get" output for IPv6 addresses differs from its output
for IPv4 addresses.
Reported by Benoit Branciard and Jan Tomasek.

Signed-off-by: Dmitry V. Levin <ldv@altlinux.org>

--- a/scripts/vps-functions.in
+++ b/scripts/vps-functions.in
@@ -121,9 +121,14 @@ vz_get_neighbour_devs()
 		return 0
 	fi
 
-	local dev netdev
+	local route dev netdev
 
-	dev="$(${IP_CMD} route get "$1" |sed -ne '/ via /! s/^.* dev \([^ ]\+\) \+src \+.*$/\1/p;Q')"
+	route="$(${IP_CMD} route get "$1" |grep ' dev .* src ')"
+	# match: $1 ... dev $dev ...
+	dev="$(echo "$route" |sed -ne '/ via /! s/^.* dev \+\([^ ]\+\) .*$/\1/p;Q')"
+	[ -n "$dev" ] ||
+	# match: $1 ... via $1 ... dev $dev ...
+	dev="$(echo "$route" |sed -ne 's/^\([^ ]\+\) \(.* \)\?via \+\1 \(.* \)\?dev \+\([^ ]\+\) .*$/\4/p;Q')"
 	[ -n "$dev" ] || return 0
 
 	for netdev in $NETDEVICES; do
